--- a/src/PhotoHelpers.fsproj
+++ b/src/PhotoHelpers.fsproj
@@ -3,7 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <PublishSingleFile>True</PublishSingleFile>
+    <PublishAOT>True</PublishAOT>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <StripSymbols>True</StripSymbols>
+    <DebugSymbols>False</DebugSymbols>
+    <DebugType>None</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,6 +41,7 @@
     <PackageReference Include="Avalonia.FuncUI" Version="1.2.0" />
     <PackageReference Include="Avalonia.FuncUI.Elmish" Version="1.2.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.7" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
     <PackageReference Include="Thoth.Json.Net" Version="11.0.0" />
   </ItemGroup>
 
