Fixed all image orientation and delete all files with same name
- Sort applier delete all files with the same name in the specified directory
- Image orientation is fixed everywhere
- Added scroll to sorter applier

--- a/src/PhotoHelpers.fsproj
+++ b/src/PhotoHelpers.fsproj
@@ -17,6 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Controls/OrientedImage.fs" />
+
     <Compile Include="Modes/Sorter/Sorter.Types.fs" />
     <Compile Include="Modes/Sorter/Sorter.State.fs" />
     <Compile Include="Modes/Sorter/Sorter.View.fs" />
